2014-03-26  Miklos Szeredi <miklos@szeredi.hu>

	* Initilaize stat buffer passed to ->getattr() and ->fgetattr() to
	zero in all cases.  Reported by Daniel Iwan

2014-03-05  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: implement readdirplus for high-level API.  Reuse the
	old "readdir" callback, but add a flags argument, that has
	FUSE_READDIR_PLUS in case this is a "plus" version.  Filesystems
	can safely ignore this flag, but if they want they can add
	optimizations based on it: i.e. only retrieve the full attributes
	in PLUS mode.  The filler function is also given a flags argument
	and the filesystem can set FUSE_FILL_DIR_PLUS if all the
	attributes in "stat" are valid.  Original patch by Eric Wong

2014-02-21  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: added fuse_lo-plus.c to the examples

2014-02-04  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: Don't use constructor functions for loading modules.
	Original patch by Fabrice Bauzac

2014-01-29  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: Add "async_dio" and "writeback_cache" options.
	Asynchronous direct I/O is supported by linux kernels 3.13 and
	later, writeback caching is supported by 3.14 and later.

2013-08-26  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: Add missing includes.  This allows compiling fuse with
	musl.  Patch by Daniel Thau

2013-07-26  Miklos Szeredi <miklos@szeredi.hu>

	* Print help on stdout instead of stderr

2013-07-25  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: fuse -> fuse3.  Allow 2.X and 3.X to coexist.  Includes
	are now stored under /usr/include/fuse3 and library is named
	libfuse3.*.  Invoke pkg-config with "fuse3" as the first argument
	to build with version 3 of the library.

	* ulockmgr: strip ulockmgr support from this source package and
	distribute it separately.  It is not needed for the building of
	libfuse, only fusexmp_fh.  Check ulockmgr library in ./configure
	and if not disable remote-lock suport in fusexmp_fh.
